--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -66,7 +66,7 @@
       firstDay: 1, 
       defaultDate: new Date('#{params[:date]}'),
       onSelect: function(dataText){
-        window.location.href = "/?date=" + dataText + "&per_page=#{(params[:per_page]).nil? ? 3 : params[:per_page]}" + "&direction=#{params[:direction]}" + "&sort=#{params[:sort]}";
+        window.location.href = "/?date=" + dataText + "&per_page=#{params_perpage}" + "&direction=#{sort_direction}" + "&sort=#{sort_column}";
       }
     });
   });
