--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -43,7 +43,7 @@
   = link_to image_tag("/images/facebook_del.png",:title => "delete facebook association"), current_user.authentications.facebook.first, :confirm => 'Are you sure you want to remove this assotiation ', :method => :delete
 
 %br
-= button_to_function "Set my position","showAddress('Украина Киев')"
+= button_to_function "Set my position","showAddress()"
 
 #map_canvas
 
