--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -50,7 +50,7 @@
 
 
 %br
-= button_to_function "Set my position","showAddress()"
+= button_to_function "Set my position","showAddress('Украина Киев')"
 
 #map_canvas
 
