deleted column street? renamed column city to address, rewrited seed, view/registration/edit, application.js, models/user.rb

--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -29,10 +29,9 @@
     = f.password_field :current_password
   %div
     %br
-    = f.label :city_and_street
+    = f.label :address
     %br
-    = f.text_field :city
-    = f.text_field :street
+    = f.text_field :address
   %div= f.submit "Update"
 .orange_stile
   %h4 Associate profile
