--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -1,4 +1,5 @@
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=ABQIAAAABjOkPfNrB7TiskPIlg4__BTVARu1I5z0BTnpsEdZuIyl8_eAKxRPW_AZmTLA4E-70bVcGMVq420dyA" type="text/javascript"></script>
+<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 //%script{:src => "http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=true_or_false&amp;key=ABQIAAAABjOkPfNrB7TiskPIlg4__BTVARu1I5z0BTnpsEdZuIyl8_eAKxRPW_AZmTLA4E-70bVcGMVq420dyA", :type => "text/javascript"}
  
 .orange_stile
