marker can be druggable, added zoom as parametr to funcrion show_map in js

--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -50,7 +50,7 @@
 
 
 %br
-= button_to_function "Set my position","showAddress('Украина Киев')"
+= button_to_function "Set my position","coords('Украина Киев',show_map,showAddress)"
 
 #map_canvas
 
