added google to Applications namespace in js

--- a/app/views/registrations/edit.haml
+++ b/app/views/registrations/edit.haml
@@ -50,7 +50,7 @@
 
 
 %br
-= button_to_function "Set my position","Application.coords('Украина Киев',show_map,showAddress)"
+= button_to_function "Set my position","Application.coords('Украина Киев',Application.show_map,Application.showAddress)"
 
 #map_canvas
 
