--- a/app/views/tasks/index.haml
+++ b/app/views/tasks/index.haml
@@ -8,7 +8,8 @@
 %h2 Your tasks for today
 
 #calendar
-%table{:border => 1}
+
+%table#tasks{:border => 1}
   %tr
     - if current_user.admin
       = helper_for_sortable "users.username", "Users"
