--- a/app/views/reports/index.haml
+++ b/app/views/reports/index.haml
@@ -26,7 +26,7 @@
                   %td.report_tasks_td_time
                     = Time.at(task.spent_time.to_i).utc.strftime("%H:%M")
                   %td
-                    = link_to image_tag("down_arrow.gif"), details_tasks_path(:start_date => params[:start_date], :end_date => params[:end_date], :user_id => task.user_id, :project_id => task.project_id, :id => task.id, :task_name => task.task_name), :remote => true, :class => "link_to_ajax"
+                    = link_to image_tag("down_arrow.gif"), details_tasks_path(:format => :js, :start_date => params[:start_date], :end_date => params[:end_date], :user_id => task.user_id, :project_id => task.project_id, :id => task.id, :task_name => task.task_name), :remote => true, :class => "link_to_ajax"
                     - id = "#{task.id}_#{task.user_id}_#{task.project_id}"
                     = link_to_function image_tag("up_arrow.gif"), "add_and_remove_arrow_button('#{id}') ", :class => "link_to_func hide"
   - else
